assets/scss/custom.scss
:root {
    --logo-background: var(--accent-color);
    &[data-scheme="dark"] {
        --logo-background: var(--card-background);
    }
}

.left-sidebar {
    --sidebar-avatar-size: 200px;
    header {

        align-items: center;

        .site-avatar .site-logo {

            border-radius: 0px;
            box-shadow: none;

        }

        .site-name, .site-description {
            display:none;
        }
    }
}

.powerby {
    display: none;
}

.logo-congratulations {
    transition: all 1s ease;
    color: var(--accent-color);
    font-weight: 700;
    text-align:center;
    overflow: hidden;
    vertical-align: bottom;
    height:0px;
    &.solved {
        height: 20px;
    }
}

.site-logo {
    position: relative;
    canvas {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
    }
}

svg#svglogo {
    > circle {
        transition: 0.1s ease;
        fill: var(--logo-background) !important;
    }

    &:hover > circle {
            filter:brightness(1.3);
    }

    #interactive:not(.solved) {
        #toggle-l, #toggle-u, #toggle-z {
            &:hover {
                cursor: pointer;
            }
        }
    }
    #letters {
        opacity: 1;
    }
    &:not(.reallogo) {
        #interactive {
            display: block;
        }
        #l, #u, #z {
            transition: 0.1s ease;
            &.active rect {
                fill: #73f47e;
                opacity: 1;
            }
            &.active circle {
                transform: translateY(-20px);
            }
            &.active path {
                fill: white;
                opacity: 0.4;
            }
            &:not(.active) path {
                opacity: 0;
                &.cls-1 {
                    fill: var(--logo-background);
                    opacity: 1;
                    filter:brightness(2);
                }
            }
    
        }

    }

    #reallogo {
        transition: visibility 0s, opacity 2s linear;
        visibility: hidden;
        opacity: 0;
    }
    #l, #u, #z {
        transition: visibility 0s, opacity 2s linear;
        opacity: 1;
        visibility: visible;
    }
    &.reallogo {
        #reallogo {
            visibility: visible;
            opacity: 1;
        }
        #l, #u, #z {
            visibility: hidden;
            opacity: 0;
        }
    }
}

